dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__timestamp_attribute.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    struct PollStart\n    {\n        #[traceevent(timestamp)] timestamp_ns: u64, worker_id: u64, task_id:\n        u64,\n    }\n})"
---
#[allow(non_camel_case_types, non_snake_case)]
impl ::dial9_trace_format::TraceEvent for PollStart {
    fn event_name() -> &'static str {
        "PollStart"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("worker_id", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("task_id", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.worker_id, enc)?;
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.task_id, enc)?;
        Ok(())
    }
}
