dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__unit_attribute.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    struct ResourceUsage\n    {\n        #[traceevent(timestamp)] timestamp_ns: u64, #[traceevent(unit = \"ns\")]\n        user_cpu_ns: u64, minor_faults: u64, #[traceevent(unit = \"bytes\")]\n        max_rss_bytes: u64,\n    }\n})"
---
impl ::dial9_trace_format::TraceEvent for ResourceUsage {
    fn event_name() -> &'static str {
        "ResourceUsage"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("user_cpu_ns", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("minor_faults", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("max_rss_bytes", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn schema_entry() -> ::dial9_trace_format::schema::SchemaEntry {
        ::dial9_trace_format::schema::SchemaEntry::with_annotations(
            Self::event_name(),
            Self::has_timestamp(),
            Self::field_defs(),
            vec![
                ::dial9_trace_format::schema::FieldAnnotation::new(0u16, "metrique.unit",
                "ns"), ::dial9_trace_format::schema::FieldAnnotation::new(2u16,
                "metrique.unit", "bytes")
            ],
        )
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.user_cpu_ns, enc)?;
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.minor_faults, enc)?;
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.max_rss_bytes, enc)?;
        Ok(())
    }
}
