dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__wire_slot_event.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    #[traceevent(wire_slot)] struct WireSlotEvent\n    { #[traceevent(timestamp)] timestamp_ns: u64, value: u32, }\n})"
---
impl ::dial9_trace_format::TraceEvent for WireSlotEvent {
    type Ref<'a> = ();
    fn event_name() -> &'static str {
        "WireSlotEvent"
    }
    fn type_slot() -> u16 {
        static SLOT: ::std::sync::atomic::AtomicU16 = ::std::sync::atomic::AtomicU16::new(
            0,
        );
        let cached = SLOT.load(::std::sync::atomic::Ordering::Relaxed);
        if cached != 0 {
            return cached;
        }
        let new = ::dial9_trace_format::__NEXT_TYPE_SLOT
            .fetch_add(1, ::std::sync::atomic::Ordering::Relaxed);
        match SLOT
            .compare_exchange(
                0,
                new,
                ::std::sync::atomic::Ordering::Relaxed,
                ::std::sync::atomic::Ordering::Relaxed,
            )
        {
            Ok(_) => new,
            Err(existing) => existing,
        }
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("value", < u32 as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <u32 as ::dial9_trace_format::TraceField>::encode(&self.value, enc)?;
        Ok(())
    }
    fn decode<'a>(
        _timestamp_ns: Option<u64>,
        _fields: &[::dial9_trace_format::types::FieldValueRef<'a>],
        _field_defs: &[::dial9_trace_format::schema::FieldDef],
    ) -> Option<Self::Ref<'a>> {
        None
    }
}
