dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__wire_slot_with_lifetime.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    #[traceevent(wire_slot)] struct WireSlotBorrowed<'a>\n    { #[traceevent(timestamp)] timestamp_ns: u64, data: &'a str, }\n})"
---
impl<'a> ::dial9_trace_format::TraceEvent for WireSlotBorrowed<'a> {
    type Id = WireSlotBorrowed<'static>;
    fn event_name() -> &'static str {
        "WireSlotBorrowed"
    }
    fn type_slot() -> u16 {
        static SLOT: ::std::sync::atomic::AtomicU16 = ::std::sync::atomic::AtomicU16::new(
            0,
        );
        let cached = SLOT.load(::std::sync::atomic::Ordering::Relaxed);
        if cached != 0 {
            return cached;
        }
        let new = ::dial9_trace_format::__NEXT_TYPE_SLOT
            .fetch_add(1, ::std::sync::atomic::Ordering::Relaxed);
        match SLOT
            .compare_exchange(
                0,
                new,
                ::std::sync::atomic::Ordering::Relaxed,
                ::std::sync::atomic::Ordering::Relaxed,
            )
        {
            Ok(_) => new,
            Err(existing) => existing,
        }
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("data", < & 'a str as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <&'a str as ::dial9_trace_format::TraceField>::encode(&self.data, enc)?;
        Ok(())
    }
}
